--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.17.8",
+    "babel-loader": "^8.2.3",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
